manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: automation
  name: automation
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 8080
  selector:
    app: automation
