manifests/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: automation
  namespace: automation
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: automation.mxinden.cloudns.cx
    http:
      paths:
      - path: /
        backend:
          serviceName: automation
          servicePort: 80
